# 2DRenderer

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
res/images/: Palette.aseprite  Tileset.aseprite
res/shaders/: particle.frag  particle.vert  sprite.frag  sprite.vert
src/: main.cpp
src/DungeonGen/: DungeonGen.hpp
src/util/: AnimationManager.hpp  Camera.hpp  Colliders.hpp  Line.hpp  NetworkManager.hpp  Particles.hpp  Player.hpp  RuleTile.hpp  Shaders.hpp  SpriteRenderer.hpp  WindowManager.hpp  emst.hpp  texture.cpp
